--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring-boot
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
