--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
